kubernetes/noracle-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noracle-frontent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: noracle-frontent
  template:
    metadata:
      labels:
        app: noracle-frontent
    spec:
      containers:
        - name: noracle-frontent
          image: registry.tech4comp.dbis.rwth-aachen.de/rwthacis/noracle-frontend:1.0.2
