kubernetes/noracle-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: noracle-frontend-service
spec:
  selector:
    app: noracle
  type: NodePort
  ports:
    - protocol: TCP
      port: 1234
      targetPort: 1234
